Use GLEW for OpenGL interface

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,8 +3,8 @@ ACLOCAL_AMFLAGS = -I m4
 
 bin_PROGRAMS = seven
 
-seven_CXXFLAGS = @warning_cxxflags@ @GLFW_CFLAGS@
-seven_LDADD = @GLFW_LIBS@
+seven_CXXFLAGS = @warning_cxxflags@ @GLFW_CFLAGS@ @GLEW_CFLAGS@
+seven_LDADD = @GLFW_LIBS@ @GLEW_LIBS@
 seven_LDFLAGS = -Wl,--as-needed
 
 seven_SOURCES = \
