Add in-progress PNG loading
Pixmaps should be resized to power-of-two sizes before continuing.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,8 +3,8 @@ ACLOCAL_AMFLAGS = -I m4
 
 bin_PROGRAMS = seven
 
-seven_CXXFLAGS = @warning_cxxflags@ @GLFW_CFLAGS@ @GLEW_CFLAGS@
-seven_LDADD = @GLFW_LIBS@ @GLEW_LIBS@
+seven_CXXFLAGS = @warning_cxxflags@ @GLFW_CFLAGS@ @GLEW_CFLAGS@ @LIBPNG_CFLAGS@
+seven_LDADD = @GLFW_LIBS@ @GLEW_LIBS@ @LIBPNG_LIBS@
 seven_LDFLAGS = -Wl,--as-needed
 
 seven_SOURCES = \
@@ -14,6 +14,7 @@ seven_SOURCES = \
 	src/opengl.hpp \
 	src/pixmap.cpp \
 	src/pixmap.hpp \
+	src/pixmap_libpng.cpp \
 	src/resource.cpp \
 	src/resource.hpp \
 	src/screen.cpp \
